--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,12 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
-  <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/dancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/frogDancer.js"></script>
+  <script src="src/chronoDancer.js"></script>
+  <script src="src/marleDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
