Updated testspec and dance party functionality - lineUpDancers() uses animation, evenly spaces dancers - breakOut() animation to set location of dancers randomly - blinkyDancer.stick() works, dancer moves to another dancer 250px away from its own initial location - wrote additional tests in dancerSpec.js, passing

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -18,6 +18,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="FrogDancer">Frog</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ChronoDancer">Chrono</a>
       <a href="#" class="lineUpDancers">Line Up</a>
+      <a href="#" class="breakOutDancers">Break Out</a>
       <audio controls loop>
         <source src="millennialfair.mp3" type="audio/ogg" class="lineUpDancers">
         Your browser does not support the audio element.
