Added more classes of dancers (Robo, Ayla, Magus, Lucca) - These dancers extend MarleDancer class

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,6 +9,10 @@
     <script src="src/frogDancer.js"></script>
     <script src="src/chronoDancer.js"></script>
     <script src="src/marleDancer.js"></script>
+    <script src="src/aylaDancer.js"></script>
+    <script src="src/magusDancer.js"></script>
+    <script src="src/roboDancer.js"></script>
+    <script src="src/luccaDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -17,10 +21,14 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MarleDancer">Marle</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="FrogDancer">Frog</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ChronoDancer">Chrono</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="AylaDancer">Ayla</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="LuccaDancer">Lucca</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MagusDancer">Magus</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RoboDancer">Robo</a>
       <a href="#" class="lineUpDancers">Line Up</a>
       <a href="#" class="breakOutDancers">Break Out</a>
       <audio controls loop>
-        <source src="millennialfair.mp3" type="audio/ogg" class="lineUpDancers">
+        <source src="millennialfair.mp3" type="audio/ogg" class="topbar">
         Your browser does not support the audio element.
       </audio>
     </div>
